--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <h1>The Greatest Note App</h1>
         <h3>Add events, checklists and notes</h3>
       </div>
-      <h2>Modal Example</h2>
+      <h2>Notes</h2>
   <!-- Trigger the modal with a button -->
-      <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
+      <button id="newNoteButton" type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Add New Note</button>
   <!-- Modal -->
-      <div class="modal fade" id="myModal" role="dialog">
+      <div class="modal" id="myModal" role="dialog">
         <div class="modal-dialog">
       <!-- Modal content-->
           <div class="modal-content">
@@ -32,7 +32,7 @@
                   <input type="text" class="form-control" id ="newFormTitle" placeholder="Note title">
                   <div class="form-group">
                     <label for="newFormDescription">Note description</label>
-                    <textarea name="textarea" style="width:250px;height:150px;"class="form-control" id ="newFormDescription" placeholder="Note description">
+                    <textarea name="textarea" class="form-control" id ="newFormDescription" placeholder="Note description">
                     </textarea>
                   </div>
                 </div>
@@ -40,7 +40,6 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-primary">Save changes</button>
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
           </div>
         </div>
