--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <h1>The Greatest Note App</h1>
         <h3>Add events, checklists and notes</h3>
       </div>
+      <div class="wrapper">
+      </div>
       <h2>Notes</h2>
   <!-- Trigger the modal with a button -->
       <button id="newNoteButton" type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Add New Note</button>
@@ -28,18 +30,17 @@
             <div class="modal-body">
               <form id="newNote">
                 <div class="form-group">
-                  <label for="newFormTitle">Note title</label>
-                  <input type="text" class="form-control" id ="newFormTitle" placeholder="Note title">
+                  <label for="newNoteTitle">Note title</label>
+                  <input type="text" class="form-control" id ="newNoteTitle" placeholder="Note title">
                   <div class="form-group">
-                    <label for="newFormDescription">Note description</label>
-                    <textarea name="textarea" class="form-control" id ="newFormDescription" placeholder="Note description">
-                    </textarea>
+                    <label for="newNoteDescription">Note description</label>
+                    <input type="text" class="form-control" id ="newNoteDescription" placeholder="Note description">
                   </div>
                 </div>
-              </form>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-primary">Save changes</button>
+              <button type="submit" class="btn btn-primary">Save changes</button>
+              </form>
             </div>
           </div>
         </div>
