--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                   <input type="text" class="form-control" id ="newNoteTitle" placeholder="Note title">
                   <div class="form-group">
                     <label for="newNoteDescription">Note description</label>
-                    <input type="text" class="form-control" id ="newNoteDescription" placeholder="Note description">
+                    <!-- <input type="text" class="form-control" id ="newNoteDescription" placeholder="Note description"> -->
+                    <textarea id="newNoteDescription" placeholder="Note description"></textarea>
                   </div>
                 </div>
             </div>
