--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                       <label for="newChecklistTitle">Checklist title</label>
                       <input type="text" class="form-control" id ="newChecklistTitle" placeholder="Checklist title">
                       <div class="form-group">
-                        <label for="newChecklistDescription">Note description</label>
-                        <input id="newChecklistDescription" type="text" class="form-control" placeholder="Checklist Description">
+                        <label for="newChecklistDescription">Checklist description</label>
+                        <input id="newChecklistDescription" type="text" class="form-control" placeholder="Checklist Description, Seperate by Commas">
                       </div>
                     </div>
                 </div>
