fixed text area

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   <input type="text" class="form-control" id ="newNoteTitle" placeholder="Note title">
                   <div class="form-group">
                     <label for="newNoteDescription">Note description</label>
-                    <textarea id="newNoteDescription" placeholder="Note description"></textarea>
+                    <textarea id="newNoteDescription" class="form-control" placeholder="Note description"></textarea>
                   </div>
                 </div>
             </div>
