--- a/index.html
+++ b/index.html
@@ -32,6 +32,22 @@
                 <div class="form-group">
                   <label for="newNoteTitle">Note title</label>
                   <input type="text" class="form-control" id ="newNoteTitle" placeholder="Note title">
+                  <h5> Priority:</h5>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="priority" value="low" checked>Low
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="priority" value="medium">Medium
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="priority" value="high">High
+                    </label>
+                  </div>
                   <div class="form-group">
                     <label for="newNoteDescription">Note description</label>
                     <textarea id="newNoteDescription" class="form-control" placeholder="Note description"></textarea>
