add priority ranking

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <form id="newNote">
                 <div class="form-group">
                   <label for="newNoteTitle">Note title</label>
-                  <input type="text" class="form-control" id ="newNoteTitle" placeholder="Note title">
+                  <input type="text" class="form-control" id ="newNoteTitle" placeholder="Note title" required>
                   <h5> Priority:</h5>
                   <div class="radio">
                     <label>
@@ -50,7 +50,7 @@
                   </div>
                   <div class="form-group">
                     <label for="newNoteDescription">Note description</label>
-                    <textarea id="newNoteDescription" class="form-control" placeholder="Note description"></textarea>
+                    <textarea id="newNoteDescription" class="form-control" placeholder="Note description" required></textarea>
                   </div>
                 </div>
             </div>
@@ -76,10 +76,10 @@
                   <form id="newChecklist">
                     <div class="form-group">
                       <label for="newChecklistTitle">Checklist title</label>
-                      <input type="text" class="form-control" id ="newChecklistTitle" placeholder="Checklist title">
+                      <input type="text" class="form-control" id ="newChecklistTitle" placeholder="Checklist title" required>
                       <div class="form-group">
                         <label for="newChecklistDescription">Checklist Items</label>
-                        <input id="newChecklistDescription" type="text" class="form-control" placeholder="Checklist Items, Seperate by Commas">
+                        <input id="newChecklistDescription" type="text" class="form-control" placeholder="Checklist Items, Seperate by Commas" required>
                       </div>
                     </div>
                 </div>
