--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
         <h1>The Greatest Note App</h1>
         <h3>Add events, checklists and notes</h3>
       </div>
-      <h2>Notes</h2>
-      <div class="wrapper">
-      </div>
   <!-- Trigger the modal with a button -->
       <button id="newNoteButton" type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Add New Note</button>
   <!-- Modal -->
@@ -77,6 +74,22 @@
                     <div class="form-group">
                       <label for="newChecklistTitle">Checklist title</label>
                       <input type="text" class="form-control" id ="newChecklistTitle" placeholder="Checklist title" required>
+                      <h5> Priority:</h5>
+                      <div class="radio">
+                        <label>
+                          <input type="radio" name="priorityChecklist" value="low" checked>Low
+                        </label>
+                      </div>
+                      <div class="radio">
+                        <label>
+                          <input type="radio" name="priorityChecklist" value="medium">Medium
+                        </label>
+                      </div>
+                      <div class="radio">
+                        <label>
+                          <input type="radio" name="priorityChecklist" value="high">High
+                        </label>
+                      </div>
                       <div class="form-group">
                         <label for="newChecklistDescription">Checklist Items</label>
                         <input id="newChecklistDescription" type="text" class="form-control" placeholder="Checklist Items, Seperate by Commas" required>
@@ -89,6 +102,9 @@
                 </div>
               </div>
             </div>
+          </div>
+          <h2>Notes</h2>
+          <div class="wrapper">
           </div>
     </div>
   </body>
