--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="jumbotron">
         <h1>The Greatest Note App</h1>
-        <h3>Add events, checklists and notes</h3>
+        <h3>Add Checklists and Notes</h3>
       </div>
   <!-- Trigger the modal with a button -->
       <button id="newNoteButton" type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Add New Note</button>
