add notes header back on

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
           </select>
         </div>
       </form>
+      <h2> Notes </h2>
       <div class="wrapper">
       </div>
     </div>
